Если пункты 2 и 3 правильно поняты, то все